maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:32: error: not found: value droit
        avance();droit();
                 ^